Changed social networks displaying, ads added

--- a/android/res/layout/main_layout.xml
+++ b/android/res/layout/main_layout.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout style="@style/MainLayout">
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/top_layout"
+<RelativeLayout style="@style/MainLayout"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <LinearLayout android:id="@+id/top_layout"
         style="@style/TopLayout"/>
 </RelativeLayout>
