--- a/android/res/values/styles.xml
+++ b/android/res/values/styles.xml
@@ -7,11 +7,13 @@
         <item name="android:orientation">vertical</item>
     </style>
 
-    <style name="TopLayout">
-        <item name="android:background">#F5F5F5</item>
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">match_parent</item>
-        <item name="android:orientation">vertical</item>
+    <style name="GdxTheme" parent="android:Theme">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:colorBackgroundCacheHint">@null</item>
+        <item name="android:windowAnimationStyle">@android:style/Animation</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowFullscreen">true</item>
     </style>
 
     <style name="SocialNetworksLayout">
@@ -21,13 +23,30 @@
         <item name="android:orientation">vertical</item>
     </style>
 
-    <style name="GdxTheme" parent="android:Theme">
-        <item name="android:windowBackground">@android:color/transparent</item>
-        <item name="android:colorBackgroundCacheHint">@null</item>
-        <item name="android:windowAnimationStyle">@android:style/Animation</item>
-        <item name="android:windowNoTitle">true</item>
-        <item name="android:windowContentOverlay">@null</item>
-        <item name="android:windowFullscreen">true</item>
+    <style name="TableLayout">
+        <item name="android:background">#F5F5F5</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:padding">10dp</item>
+    </style>
+
+    <style name="JoinUsTextView">
+        <item name="android:layout_span">3</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:textColor">#49595E</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:text">@string/social_networks_title</item>
+        <item name="android:gravity">center</item>
+    </style>
+
+    <style name="ImageButton">
+        <item name="android:background">@null</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
     </style>
 
 </resources>
